# nex

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
file_organizer/: __init__.py  categories.py  cli.py  main.py  organizer.py
file_organizer.egg-info/: PKG-INFO  SOURCES.txt
file_organizer/docs/: __init__.py  api_docs.md  contributing.md  examples.md  index.md  installation.md  user_guide.md
